# santander-desafio

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  data.csv  data_company.csv  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  crud.py  graph_analysis.py  main.py  models.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 9cd34ce4e6f7_creating_companies_table.py  eee516dc9441_creating_transactions_table.py
app/api/: deps.py  main.py
app/api/internal/: analysis.py  company.py  dashboard.py
app/api/routes/: analysis.py  company.py  dashboard.py  login.py
app/core/: config.py  neo4j.py
app/static/analysis/: script.js  style.css
app/static/login/: script.js  style.css
app/templates/: analysis_page.html
app/templates/analysis/: analysis_page.html
app/templates/login/: login_page.html
data/: data_companies.csv
